# Bithack-2019

./: README.md
bithack/BitBox/: CMakeLists.txt
bithack/BitBox/src/: main.cpp
bithack/BitBox/src/motor_control/: common.hpp  link.cpp  link.hpp  reporter.cpp  reporter.hpp
bithack/MC/: mc.py
bithack/bitsystem_release/QtQuick/Dialogs/: DefaultColorDialog.qmlc  DefaultDialogWrapper.qmlc  DefaultFileDialog.qmlc  DefaultFontDialog.qmlc  DefaultMessageDialog.qmlc
